--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "html5-qrcode": "^2.3.8",
+    "hugeicons-react": "^0.3.0",
     "i18next": "^25.6.3",
     "lucide-react": "^0.554.0",
     "next-themes": "^0.4.6",
