--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
     "@hookform/resolvers": "^5.2.2",
     "@microsoft/signalr": "^10.0.0",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -50,6 +51,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.66.1",
     "react-i18next": "^16.3.5",
+    "react-rnd": "^10.5.2",
     "react-router-dom": "^7.9.6",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
