--- a/package.json
+++ b/package.json
@@ -54,8 +54,9 @@
     "react-hook-form": "^7.66.1",
     "react-i18next": "^16.3.5",
     "react-rnd": "^10.5.2",
-    "react-router-dom": "^7.9.6",
-    "sonner": "^2.0.7",
+"react-router-dom": "^7.9.6",
+        "recharts": "^2.15.0",
+        "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "three": "^0.180.0",
