--- a/package.json
+++ b/package.json
@@ -46,8 +46,11 @@
     "html5-qrcode": "^2.3.8",
     "hugeicons-react": "^0.3.0",
     "i18next": "^25.6.3",
+    "jspdf": "^4.1.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.554.0",
     "next-themes": "^0.4.6",
+    "pptxgenjs": "^4.0.1",
     "react": "^19.1.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.1.0",
@@ -60,6 +63,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "three": "^0.180.0",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.13",
     "zustand": "^5.0.8"
   },
