--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.554.0",
     "next-themes": "^0.4.6",
+    "powerbi-client": "^2.23.9",
     "pptxgenjs": "^4.0.1",
     "react": "^19.1.0",
     "react-day-picker": "^9.13.0",
